--- a/ApplicationMVC/Views/_ViewImports.cshtml
+++ b/ApplicationMVC/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using ApplicationMVC
 @using ApplicationMVC.Models
 @using Domain.DTOs
+@using ApplicationMVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
